--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "reactcounter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shahviransh.github.io",
+  "homepage": "https://shahviransh.github.io/reactcounter",
   "dependencies": {
     "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
